--- a/app/src/main/res/layout/fragment_worker_warehouse.xml
+++ b/app/src/main/res/layout/fragment_worker_warehouse.xml
@@ -91,7 +91,7 @@
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/btn_get_product"
+            android:id="@+id/btn_take_product"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
