--- a/app/src/main/res/layout/fragment_worker_home.xml
+++ b/app/src/main/res/layout/fragment_worker_home.xml
@@ -111,7 +111,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_weight="1"
-            android:backgroundTint="@color/pink_dashboard"
+            android:backgroundTint="@color/gold"
             app:layout_constraintStart_toStartOf="@+id/guideline_start"
             app:layout_constraintTop_toBottomOf="@+id/linear_layout_dashboard_and_title"
             app:strokeWidth="0dp">
@@ -134,7 +134,7 @@
                         android:layout_height="20dp"
                         android:layout_gravity="center"
                         android:src="@drawable/ic_cash"
-                        app:tint="@color/pink_dashboard" />
+                        app:tint="@color/gold" />
 
 
                 </com.google.android.material.card.MaterialCardView>
@@ -169,6 +169,7 @@
 
         <!--  Dashboard Horizontal  -->
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -212,16 +213,16 @@
                 </com.google.android.material.card.MaterialCardView>
 
                 <TextView
-                    android:id="@+id/tv_total_stock_item_in_a_day"
+                    android:id="@+id/tv_total_product_in_a_day"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:ellipsize="end"
                     android:fontFamily="@font/gilroy_semibold"
                     android:maxLines="1"
-                    tools:text="224"
                     android:textColor="@color/white"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    tools:text="224" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -230,7 +231,7 @@
                     android:ellipsize="end"
                     android:fontFamily="@font/sfpro_medium"
                     android:maxLines="12"
-                    android:text="@string/worker_dashboard_stock_in_a_day"
+                    android:text="Barang Masuk Hari Ini"
                     android:textColor="@color/white"
                     android:textSize="14sp" />
             </LinearLayout>
@@ -271,6 +272,136 @@
                 </com.google.android.material.card.MaterialCardView>
 
                 <TextView
+                    android:id="@+id/tv_total_product_out_a_day"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:ellipsize="end"
+                    android:fontFamily="@font/gilroy_semibold"
+                    android:maxLines="1"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    tools:text="20" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:ellipsize="end"
+                    android:fontFamily="@font/sfpro_medium"
+                    android:maxLines="1"
+                    android:text="Barang Keluar Hari Ini"
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
+            </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
+
+    </LinearLayout>
+
+    <!--  Dashboard Horizontal  -->
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
+        app:layout_constraintStart_toStartOf="@+id/guideline_start"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/dashboard_menu_5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:layout_weight="1"
+            android:backgroundTint="@color/dashboard_menu_3"
+            app:layout_constraintStart_toStartOf="@+id/guideline_start"
+            app:layout_constraintTop_toBottomOf="@+id/linear_layout_dashboard_and_title"
+            app:strokeWidth="0dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="14dp"
+                tools:ignore="RtlSymmetry">
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    app:cardCornerRadius="100dp"
+                    app:strokeWidth="0dp">
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/box_arrow_in_down_left"
+                        app:tint="@color/dashboard_menu_3" />
+
+
+                </com.google.android.material.card.MaterialCardView>
+
+                <TextView
+                    android:id="@+id/tv_total_stock_item_in_a_day"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:ellipsize="end"
+                    android:fontFamily="@font/gilroy_semibold"
+                    android:maxLines="1"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    tools:text="224" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:ellipsize="end"
+                    android:fontFamily="@font/sfpro_medium"
+                    android:maxLines="12"
+                    android:text="@string/worker_dashboard_stock_in_a_day"
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
+            </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/dashboard_menu_6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_weight="1"
+            android:backgroundTint="@color/pink_dashboard"
+            app:layout_constraintStart_toStartOf="@+id/guideline_start"
+            app:layout_constraintTop_toBottomOf="@+id/linear_layout_dashboard_and_title"
+            app:strokeWidth="0dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="14dp"
+                tools:ignore="RtlSymmetry">
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    app:cardCornerRadius="100dp"
+                    app:strokeWidth="0dp">
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/box_arrow_out_up_right"
+                        app:tint="@color/pink_dashboard" />
+
+
+                </com.google.android.material.card.MaterialCardView>
+
+                <TextView
                     android:id="@+id/tv_total_stock_item_out_a_day"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -278,9 +409,9 @@
                     android:ellipsize="end"
                     android:fontFamily="@font/gilroy_semibold"
                     android:maxLines="1"
-                    tools:text="20"
                     android:textColor="@color/white"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    tools:text="20" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -294,6 +425,7 @@
                     android:textSize="14sp" />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
+
     </LinearLayout>
 
 
