--- a/app/src/main/res/layout/fragment_all_product.xml
+++ b/app/src/main/res/layout/fragment_all_product.xml
@@ -12,6 +12,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_product_list"
+            android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
