--- a/app/src/main/res/layout/warehouse_list_product.xml
+++ b/app/src/main/res/layout/warehouse_list_product.xml
@@ -16,14 +16,11 @@
         <!--  Product Image  -->
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/materialCardView"
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            android:layout_marginStart="8dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:elevation="8dp"
             app:cardCornerRadius="8dp"
-            app:cardElevation="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -43,9 +40,8 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
             app:layout_constraintEnd_toEndOf="parent"
@@ -55,12 +51,14 @@
 
             <TextView
                 android:id="@+id/tv_product_name"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="2"
-                android:fontFamily="@font/gilroy_semibold"
-                android:maxLines="2"
-                android:textSize="18sp"
+                android:layout_marginBottom="4dp"
+                android:fontFamily="@font/sfpro_bold"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textSize="16sp"
                 tools:text="Abaya Hijau\nWaduh" />
 
 
@@ -72,9 +70,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
                     android:layout_weight="1"
-                    android:fontFamily="@font/gilroy_medium"
+                    android:fontFamily="@font/sfpro_regular"
                     android:maxLines="2"
                     android:text="Warna"
                     android:textSize="16sp" />
@@ -83,10 +80,9 @@
                     android:id="@+id/tv_product_color"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:fontFamily="@font/gilroy_semibold"
-                    android:maxLines="2"
-                    android:textSize="16sp"
+                    android:fontFamily="@font/sfpro_bold"
+                    android:maxLines="1"
+                    android:textSize="14sp"
                     tools:text="Merah" />
 
             </LinearLayout>
@@ -99,21 +95,19 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
                     android:layout_weight="1"
-                    android:fontFamily="@font/gilroy_medium"
+                    android:fontFamily="@font/sfpro_regular"
                     android:maxLines="2"
                     android:text="Total Stock"
-                    android:textSize="16sp" />
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/tv_product_stock"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:fontFamily="@font/gilroy_semibold"
+                    android:fontFamily="@font/sfpro_bold"
                     android:maxLines="2"
-                    android:textSize="16sp"
+                    android:textSize="14sp"
                     tools:text="3000" />
 
             </LinearLayout>
