--- a/app/src/main/res/layout/fragment_worker_warehouse.xml
+++ b/app/src/main/res/layout/fragment_worker_warehouse.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".views.worker.warehouse.WorkerWarehouseFragment">
 
-    <!--  Dashboard  -->
+    <!--  Menu  -->
     <LinearLayout
         android:id="@+id/linear_layout_search_and_title"
         android:layout_width="0dp"
@@ -29,8 +29,9 @@
 
         <ImageView
             android:id="@+id/btn_search"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
+            android:layout_width="24dp"
+            android:layout_gravity="center"
+            android:layout_height="24dp"
             android:src="@drawable/ic_search" />
     </LinearLayout>
 
@@ -185,25 +186,99 @@
         </com.google.android.material.card.MaterialCardView>
     </LinearLayout>
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tab_layout"
+    <!--  Other Menu  -->
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        app:tabTextColor="@color/black" />
+        android:fontFamily="@font/gilroy_bold"
+        android:text="Menu Lainnya"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@+id/guideline_start"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/view_pager"
+    <!--  All Product  -->
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cv_all_product"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/white"
+        app:cardCornerRadius="8dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline_end"
         app:layout_constraintStart_toStartOf="@+id/guideline_start"
-        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Semua Produk"
+                android:layout_gravity="center"
+                android:fontFamily="@font/gilroy_semibold"
+                android:padding="16dp"
+                android:textSize="16sp"
+                />
+
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_margin="16dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:rotation="180"
+                android:src="@drawable/ic_arrow_forward" />
+
+        </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
+    <!--  All Product  -->
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cv_all_product_low_stock"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/white"
+        app:cardCornerRadius="8dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
+        app:layout_constraintStart_toStartOf="@+id/guideline_start"
+        app:layout_constraintTop_toBottomOf="@+id/cv_all_product">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:fontFamily="@font/gilroy_semibold"
+                android:padding="16dp"
+                android:text="Stok Rendah"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                android:layout_margin="16dp"
+                android:rotation="180"
+                android:src="@drawable/ic_arrow_forward" />
+
+        </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_start"
