--- a/app/src/main/res/layout/warehouse_list_product_shimmer.xml
+++ b/app/src/main/res/layout/warehouse_list_product_shimmer.xml
@@ -36,8 +36,8 @@
                 android:id="@+id/iv_product_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/abaya_hijau" />
+                android:background="#B6B6B6"
+                android:scaleType="centerCrop" />
 
         </com.google.android.material.card.MaterialCardView>
 
@@ -62,6 +62,7 @@
                 android:layout_height="0dp"
                 android:layout_marginBottom="4dp"
                 android:layout_weight="2"
+                android:background="#B6B6B6"
                 android:ellipsize="end"
                 android:fontFamily="@font/sfpro_bold"
                 android:maxLines="1"
@@ -78,9 +79,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:background="#B6B6B6"
                     android:fontFamily="@font/sfpro_regular"
                     android:maxLines="2"
-                    android:text="Warna"
+                    tools:text="Warna"
                     android:textSize="16sp" />
 
                 <TextView
@@ -88,6 +90,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:background="#B6B6B6"
                     android:fontFamily="@font/sfpro_bold"
                     android:maxLines="1"
                     android:textSize="14sp"
@@ -104,9 +107,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:background="#B6B6B6"
                     android:fontFamily="@font/sfpro_regular"
                     android:maxLines="2"
-                    android:text="Total Stock"
+                    tools:text="Total Stock"
                     android:textSize="14sp" />
 
                 <TextView
@@ -114,6 +118,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:background="#B6B6B6"
                     android:fontFamily="@font/sfpro_bold"
                     android:maxLines="2"
                     android:textSize="14sp"
